# game-ai-engineer

./: .gitignore  Cargo.toml  PLAN.md  README.md
src/: lib.rs  main.rs
src/companies/: mod.rs
src/config/: companies.toml  game_config.toml  interview_questions.toml  skills.toml
src/engine/: cache.rs  config.rs  context.rs  mod.rs  npc.rs  traits.rs
src/game/: mod.rs  state.rs
src/graphics/: fonts.rs  mod.rs  sprites.rs
src/interview/: mod.rs  questions.rs
src/jobs/: mod.rs
src/llm/: anthropic.rs  mock.rs  mod.rs  provider.rs
src/player/: mod.rs
src/skills/: mod.rs
src/testing/: canvas.rs  harness.rs  input.rs  mod.rs
src/ui/: hud.rs  mod.rs
src/world/: camera.rs  map.rs  mod.rs  npc.rs  player.rs
